--- a/formador.html
+++ b/formador.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <h1>Hello, world!</h1>
-    <p>O Formador esteve aqui</p>
+    <p>O Formando esteve aqui (Ps: Luiz Pinto)</p>
     </br>
     
 
