--- a/xavier.html
+++ b/xavier.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <h1>Hello, world!</h1>
-    <p>O Jão Xavier esteve aqui</p>
+    <p>O João Xavier esteve aqui</p>
     </br>
     
 
