--- a/xavier.html
+++ b/xavier.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <h1>Hello, world!</h1>
-    <p>O João Xavier esteve aqui</p>
+    <marquee><p>O João Xavier esteve aqui * O João Xavier esteve aqui O João Xavier esteve aqui * O João Xavier esteve aquiO João Xavier esteve aqui * O João Xavier esteve aqui</p></marquee>
     </br>
     
 
