--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 
     <title>Hello, world!</title>
   </head>
-  <body>
+  <body style="text-align: center;">
     <h1>Hello, world!</h1>
-    <p>O Formando esteve aqui (Ps: Luiz Pinto)</p>
+    <p>O Formador esteve aqui </p>
+    <img src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/dog-puppy-on-garden-royalty-free-image-1586966191.jpg?crop=1.00xw:0.669xh;0,0.190xh&resize=640:*">
     </br>
     
 
